# MaiBot

./: .gitattributes  .gitignore  AGENTS.md  CODE_WIKI.md  Dockerfile  Dockerfile.freethreaded  EULA.md  MaiBot配置教程.html  MaiBot首次启动后配置修改指南.html  PRIVACY.md  README.md  bot.py  docker-compose.yml  docker-entrypoint-wrapper.sh  docker-entrypoint.sh  pyproject.toml  requirements.txt  temp_logs.txt  一键启动与配置速查.txt  崩坏星穹铁道完整资料文档_终极版.md  银狼角色完整资料.md
.codeartsdoer/rule/: MaiBot智能体自主性架构.mdc
.devcontainer/: Dockerfile  devcontainer.json  setup-dood-override.sh
.github/scripts/: generate_repository_metrics.py  update_dashboard_dependency.py
.github/workflows/: metrics.yml  publish-webui-dist.yml  update-dashboard-dependency.yml
agents/: bronya.md  columbina.md  elysia.md  fu_hua.md  himeko.md  kiana.md  mei.md  seele.md  signora.md  silver_wolf.md  tighnari.md  veliona.md  welt.md
changelogs/: changelog.md  changelog_dev.md
code_scripts/: check_orphan_expressions.py  check_orphan_jargons.py  migrate_expression_jargon_db.py
dashboard/: CONTEXT.md  app-version.ts  electron.vite.config.ts  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
dashboard/docs/: webui-tls-ssl-compose.md  webui-tls-ssl.md
dashboard/src/: index.css  main.tsx  router.tsx
docs/: README_CN.md  README_EN.md  philosophy.md  plugin_persistence.md
docs/alybl/: Linux与PowerShell文件命令对照手册.html  Linux与PowerShell文件命令对照手册.md  VSCode远程SSH配置记录.md  api文档.md  deepseekapidoc  docker-ops-guide.md  运维操作手册.md  远程WebUI访问操作手册.md  阿里嵌入模型.md  (+1 more)
pytests/: test_builtin_plugin_management.py  test_chat_session_data_model.py  test_context_message_fallback.py  test_maisaka_builtin_context.py  test_maisaka_builtin_query_memory.py  test_maisaka_builtin_query_person_profile.py  test_maisaka_chat_loop_visual_mode.py  test_maisaka_history_post_processor.py  test_maisaka_memory_retention.py  test_maisaka_monitor_protocol.py  test_maisaka_person_profile_config.py  test_maisaka_person_profile_injector.py  test_maisaka_timing_gate.py  test_maisaka_tool_result_media.py  test_message_gateway_runtime.py  test_message_image_persistence.py  test_plugin_manifest_display.py  test_plugin_runtime_action_bridge.py  test_plugin_runtime_api.py  test_prompt_cli_renderer_multimodal_html.py  test_send_service.py  test_tool_availability.py  test_visual_message_limiter.py
scripts/: abtest_behavior_retrieval_idf.py  abtest_behavior_scene_distribution_repeats.py  abtest_behavior_scene_embedding_match.py  abtest_behavior_scene_enrichment.py  abtest_behavior_scene_learning_merge.py  abtest_behavior_scene_summary_field.py  abtest_behavior_soft_cluster_distribution.py  analyze_bot_phrase_patterns.py  analyze_jargon_count_distribution.py  analyze_maisaka_prompt_sections.py  analyze_tool_usage_by_chat.py  check_import_guards.py  cleanup_behavior_feedback_history.py  cleanup_behavior_generic_tags.py  compare_behavior_need_trait_sidechannel.py  compare_behavior_scene_matching.py  compare_behavior_sliding_window_learning.py  evaluate_behavior_learning_quality.py  evaluate_bot_phrase_regex_capture.py  evaluate_offline_behavior_retrieval.py  import_offline_behavior_learning.py  jargon_learn_from_message_segments.py  jargon_learn_from_planner_logs.py  merge_behavior_scene_clusters_cross_chat.py  migrate_taxonomy_to_connectionist.py  mmipkg_tool.py  offline_behavior_learning.py  sample_behavior_matching_report.py
src/: main.py
tests/: test_checkpoint_writer_e2e.py  test_config_upgrade_hooks.py  test_emoji_maintenance.py  test_m2_deepseek_e2e.py  test_maisaka_builtin_send_image.py  test_maisaka_voice_messages.py  test_mcp_connection_imports.py  test_subagent_e2e.py  test_t092_stress.py  test_t093_m3_e2e.py  test_tool_result_media_messages.py
(+1134 files in other folders)
